# opencv_and_ros

./: CMakeLists.txt  package.xml
scripts/: image_publisher.py  image_subscriber.py
